# fem-2D-heat

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
run/: test2.txt
scripts/: run.sh  run_valgrind.sh
src/: constants.c  constants.h  equation.c  equation.h  h_matrix.c  h_matrix.h  helpers.h  integrals.c  integrals.h  io.c  io.h  main.c  mesh.c  mesh.h  utility.c  utility.h
